--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb+srv://Manojparjapat:man%40%40637@AAPNOALWAR.mongodb.net/aapnoalwar
+MONGO_URI=mongodb+srv://Manojparjapat:man%40%40637@aapnoalwar.iyjpptu.mongodb.net/?retryWrites=true&w=majority&appName=AAPNOALWAR
 JWT_SECRET=mySuperSecretKey123
